[package]
name = "yabe64"
version = "0.1.1"
edition = "2024"

[[test]]
name = "base64"
path = "tests/base64.rs"

[[test]]
name = "base32"
path = "tests/base32.rs"

[[test]]
name = "base32_hex"
path = "tests/base32_hex.rs"

[[test]]
name = "base45"
path = "tests/base45.rs"

[features]
custom_bases = []
